#+title: Change Log for ollama-buddy
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2025-02-07>

Added query finished message.

** <2025-02-06>

- Initial release
- Basic chat functionality
- Menu-driven interface
- Region-based interactions
- Model switching support

* Testing

Developing locally and running through and evaluating elisp code.

Sending text below with various edge cases and challenging content to test =ollama-buddy= text handling capabilities.

#+begin_src text
=== Test Case 1: Special Characters and Symbols ===
§ ¶ † ‡ ± ÷ × ≠ ≈ ~ ≤ ≥ µ ¢ £ € ¥ © ® ™
⁰ ¹ ² ³ ⁴ ⁵ ⁶ ⁷ ⁸ ⁹ ⁿ ∞ ∑ ∏ √ ∂ ∆ ∇ ∫ ∮

=== Test Case 2: Quotation Marks and Apostrophes ===
"Smart quotes" vs "straight quotes"
Don't mix up 'single' and 'curly' quotes
She said: "I'm not sure about the 'nested quotes' here."

=== Test Case 3: JSON-like Content ===
{
  "key": "value with \"quotes\"",
  'problem': 'mixing quote types',
  nested: {
    "escape\\chars": "testing\nNewlines",
    "numbers": 123.456
  }
}

=== Test Case 4: Code Snippets with Mixed Syntax ===
#+end_srcpython
def test_func(x='test'):
    return f"Value is {x}\n"
#+begin_src 

<!-- HTML Comment -->
<div class="test">
    'Mixed content' && "quotes"
    =backticks= and $variables
</div>

=== Test Case 5: Unicode Characters ===
🌟 Stars and 🌙 moons
👨‍👩‍👧‍👦 Family emoji
🏳️‍🌈 Complex emoji
→ ← ↑ ↓ ↔ ↕ ⇄ ⇅

=== Test Case 6: Whitespace and Line Endings ===
Text with trailing spaces    
Text with tabs		between
Line with mixed endings\r\n
No ending on last line without newline

=== Test Case 7: Shell Special Characters ===
echo "Testing $(command substitution)"
grep -r "pattern" | awk '{print $1}' > output.txt